// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom config 1`] = `
Object {
  "context": "./src/custom-folder/context.ts:Context",
  "language": "typescript",
  "models": Object {
    "files": Array [
      "./src/custom-folder/models/**.ts",
    ],
  },
  "output": "./src/custom-folder/__generated_custom__/graphqlgen.ts",
  "resolver-scaffolding": Object {
    "layout": "file-per-type",
    "output": "./src/custom-folder/__generated_custom__/tmp-resolvers",
  },
  "schema": "./src/custom-folder/schema/**.graphql",
  "schema-output": "./src/custom-folder/__generated_custom__/graphqlgen.schema.graphql",
}
`;

exports[`Default config 1`] = `
Object {
  "context": "./src/graphql/context.ts:Context",
  "language": "typescript",
  "models": Object {
    "files": Array [
      "./src/graphql/models/**.ts",
    ],
  },
  "output": "./src/graphql/generated/graphqlgen.ts",
  "resolver-scaffolding": Object {
    "layout": "file-per-type",
    "output": "./src/graphql/generated/tmp-resolvers",
  },
  "schema": "./src/graphql/schema/**.graphql",
  "schema-output": "./src/graphql/generated/graphqlgen.schema.graphql",
}
`;
